--- a/Classification_MNIST_DNN_TensorFlow.ipynb
+++ b/Classification_MNIST_DNN_TensorFlow.ipynb
@@ -4,15 +4,27 @@
   "metadata": {
     "anaconda-cloud": {},
     "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
+      "display_name": "Python [Root]",
+      "language": "python",
+      "name": "Python [Root]"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.5.2"
     },
     "colab": {
       "name": "Copy of Classification_MNIST_DNN_TensorFlow.ipynb",
       "provenance": [],
       "include_colab_link": true
-    },
-    "accelerator": "GPU"
+    }
   },
   "cells": [
     {
@@ -77,7 +89,7 @@
       "metadata": {
         "id": "OgZl0Q0GW8yv",
         "colab_type": "code",
-        "outputId": "32f3d345-2da4-4804-d75a-6f7ff71c9f95",
+        "outputId": "17c90421-a78a-41f8-bcae-adc9b5cfc01f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 496
@@ -95,7 +107,7 @@
         {
           "output_type": "stream",
           "text": [
-            "WARNING:tensorflow:From <ipython-input-4-cea1a206c578>:2: read_data_sets (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
+            "WARNING:tensorflow:From <ipython-input-3-cea1a206c578>:2: read_data_sets (from tensorflow.contrib.learn.python.learn.datasets.mnist) is deprecated and will be removed in a future version.\n",
             "Instructions for updating:\n",
             "Please use alternatives such as official/mnist/dataset.py from tensorflow/models.\n",
             "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/contrib/learn/python/learn/datasets/mnist.py:260: maybe_download (from tensorflow.contrib.learn.python.learn.datasets.base) is deprecated and will be removed in a future version.\n",
@@ -134,7 +146,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 4
+          "execution_count": 3
         }
       ]
     },
@@ -143,7 +155,7 @@
       "metadata": {
         "id": "qmo5OKEcW8y1",
         "colab_type": "code",
-        "outputId": "d3e0c939-91db-4d79-8383-acc13aee0b56",
+        "outputId": "32e65361-db73-41e2-d65c-80db2a2c16d9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 156
@@ -175,7 +187,7 @@
       "metadata": {
         "id": "TKFJeMxHW8y7",
         "colab_type": "code",
-        "outputId": "9c9d07df-6a87-406b-8f44-3056c4915435",
+        "outputId": "7d4489d7-69af-472c-bc6e-36e11218d9c1",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 54
@@ -190,13 +202,13 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "Datasets(train=<tensorflow.contrib.learn.python.learn.datasets.mnist.DataSet object at 0x7fc01c34ee10>, validation=<tensorflow.contrib.learn.python.learn.datasets.mnist.DataSet object at 0x7fbfd6af3898>, test=<tensorflow.contrib.learn.python.learn.datasets.mnist.DataSet object at 0x7fbfd6af32e8>)"
+              "Datasets(train=<tensorflow.contrib.learn.python.learn.datasets.mnist.DataSet object at 0x7fd1a8012c18>, validation=<tensorflow.contrib.learn.python.learn.datasets.mnist.DataSet object at 0x7fd191d02ac8>, test=<tensorflow.contrib.learn.python.learn.datasets.mnist.DataSet object at 0x7fd191d02be0>)"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 6
+          "execution_count": 5
         }
       ]
     },
@@ -251,16 +263,16 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "oe_4TBXbW8zK",
+        "id": "HAEsO2V289E5",
         "colab_type": "code",
-        "outputId": "ad285320-cb15-42ba-94a7-58166c1de75a",
+        "outputId": "c68693c2-0589-442f-92fc-539948813da6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
         }
       },
       "source": [
-        "trainY[0:1]"
+        "trainX[0].shape"
       ],
       "execution_count": 0,
       "outputs": [
@@ -268,7 +280,37 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "array([[0., 0., 0., 0., 0., 0., 0., 1., 0., 0.]])"
+              "(784,)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "oe_4TBXbW8zK",
+        "colab_type": "code",
+        "outputId": "f95976ec-f25e-4236-852b-327755e1ad20",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        }
+      },
+      "source": [
+        "trainY[0]"
+      ],
+      "execution_count": 0,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0., 0., 0., 0., 0., 0., 0., 1., 0., 0.])"
             ]
           },
           "metadata": {
@@ -291,12 +333,26 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "OKUS2An99m5i",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "!mkdir mytflogs"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "VeExHZ_qW8zN",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "logs_path = \"/content/\"\n",
+        "# /content/\n",
+        "logs_path = \"/content/mytflogs/\"\n",
         "learning_rate = 0.04\n",
         "n_features = trainX.shape[1]\n",
         "n_classes = trainY.shape[1]\n",
@@ -308,10 +364,27 @@
         "#How many times all the data to be shown\n",
         "training_epochs = 100\n",
         "\n",
-        "K = 200\n",
-        "L = 100\n",
-        "M = 60\n",
-        "N = 30"
+        "K = 200  \n",
+        "L = 100  # 150 \n",
+        "M = 60   # 100\n",
+        "N = 30  # 50 "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pZI-QBQc-X4f",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "for each_Epoch in totalEPoch:\n",
+        "  for each_batch_of_data in total_Batch:\n",
+        "    # do the optimization / learning \n",
+        "    # calculate the weight and loss \n",
+        "    "
       ],
       "execution_count": 0,
       "outputs": []
@@ -362,6 +435,60 @@
       "source": [
         "Layer 1"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rYMU9oUz_tHc",
+        "colab_type": "text"
+      },
+      "source": [
+        "THis is Hidden Layer "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "t4akm7ymBReT",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "K = 200  \n",
+        "L = 100  # 150 \n",
+        "M = 60   # 100\n",
+        "N = 30  # 50 "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8XvVLveXCxXh",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Tensorflow -- though it's python based; but uses the concept like c/java to initialize the data structure first \n",
+        "# Keras - it's python and does initialise the data structure dynamically \n",
+        "# pytorch - same as keras "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Cxo0ZOXZA2qX",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "784 (Input)  --> 200 ---> 100 --> 60 --> 30 ---> 10  (Output)"
+      ],
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -439,6 +566,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ePaNRB8b_wMm",
+        "colab_type": "text"
+      },
+      "source": [
+        "This is putput layer "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "H2bgqjGnW8zZ",
@@ -472,6 +609,7 @@
         "colab": {}
       },
       "source": [
+        "# reduce_sum --> Sigma from the equation \n",
         "with tf.name_scope('Loss'):\n",
         "    cross_entropy = tf.reduce_mean(-tf.reduce_sum(y_ * tf.log(y), reduction_indices=[1]))"
       ],
@@ -496,7 +634,7 @@
         "colab": {}
       },
       "source": [
-        "with tf.name_scope('train'):        \n",
+        "with tf.name_scope('train_opt'):        \n",
         "    train_op = tf.train.GradientDescentOptimizer(learning_rate).minimize(cross_entropy)    "
       ],
       "execution_count": 0,
@@ -584,7 +722,7 @@
       "metadata": {
         "id": "YFXMDoRZW8zv",
         "colab_type": "code",
-        "outputId": "2583636b-3aec-45c2-dfa8-8f62293a933b",
+        "outputId": "02213830-4212-4d63-e6a4-1528904e2b2b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 697
@@ -644,39 +782,39 @@
             "Epoch:  10\n",
             "Test Accuracy:  0.1028\n",
             "Epoch:  15\n",
-            "Test Accuracy:  0.1852\n",
+            "Test Accuracy:  0.1168\n",
             "Epoch:  20\n",
-            "Test Accuracy:  0.2786\n",
+            "Test Accuracy:  0.345\n",
             "Epoch:  25\n",
-            "Test Accuracy:  0.4377\n",
+            "Test Accuracy:  0.5401\n",
             "Epoch:  30\n",
-            "Test Accuracy:  0.6776\n",
+            "Test Accuracy:  0.7319\n",
             "Epoch:  35\n",
-            "Test Accuracy:  0.7972\n",
+            "Test Accuracy:  0.8306\n",
             "Epoch:  40\n",
-            "Test Accuracy:  0.8583\n",
+            "Test Accuracy:  0.8827\n",
             "Epoch:  45\n",
-            "Test Accuracy:  0.8895\n",
+            "Test Accuracy:  0.9026\n",
             "Epoch:  50\n",
-            "Test Accuracy:  0.9059\n",
+            "Test Accuracy:  0.9143\n",
             "Epoch:  55\n",
-            "Test Accuracy:  0.9165\n",
+            "Test Accuracy:  0.9242\n",
             "Epoch:  60\n",
-            "Test Accuracy:  0.926\n",
+            "Test Accuracy:  0.9298\n",
             "Epoch:  65\n",
-            "Test Accuracy:  0.9319\n",
+            "Test Accuracy:  0.9361\n",
             "Epoch:  70\n",
-            "Test Accuracy:  0.9359\n",
+            "Test Accuracy:  0.9396\n",
             "Epoch:  75\n",
-            "Test Accuracy:  0.9399\n",
+            "Test Accuracy:  0.9431\n",
             "Epoch:  80\n",
-            "Test Accuracy:  0.944\n",
+            "Test Accuracy:  0.9465\n",
             "Epoch:  85\n",
-            "Test Accuracy:  0.9467\n",
+            "Test Accuracy:  0.9502\n",
             "Epoch:  90\n",
-            "Test Accuracy:  0.9498\n",
+            "Test Accuracy:  0.9541\n",
             "Epoch:  95\n",
-            "Test Accuracy:  0.952\n"
+            "Test Accuracy:  0.9556\n"
           ],
           "name": "stdout"
         }
