--- a/Session_7_Classification_MNIST_CNN.ipynb
+++ b/Session_7_Classification_MNIST_CNN.ipynb
@@ -23,6 +23,7 @@
     "colab": {
       "name": "Copy of Session_7_Classification_MNIST_CNN.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "accelerator": "GPU"
@@ -63,7 +64,7 @@
       "metadata": {
         "id": "7pb-pAbwpkNX",
         "colab_type": "code",
-        "outputId": "11969a4f-9fb0-4f56-da2a-2fa4d546feb2",
+        "outputId": "0a895415-d771-43d5-9680-30ad467bcfca",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 530
@@ -191,7 +192,7 @@
       "metadata": {
         "id": "nyxBOjoQpkOY",
         "colab_type": "code",
-        "outputId": "4d89f6af-02f7-476b-aa9e-5f3ca27a5be6",
+        "outputId": "841b1ed0-01b2-4971-a798-bc9ad6652b5f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -303,6 +304,7 @@
         "colab": {}
       },
       "source": [
+        "# first level flattening , for it be proccessed in Conv Layer \n",
         "model.add(Reshape((28,28,1),input_shape=(784,)))"
       ],
       "execution_count": 0,
@@ -323,28 +325,15 @@
       "metadata": {
         "id": "7YgaOkCYpkPC",
         "colab_type": "code",
-        "outputId": "cb436e19-93d7-49f1-d3c4-8eeff99df88a",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 88
-        }
+        "colab": {}
       },
       "source": [
-        "model.add(Conv2D(32,kernel_size=(3,3),activation='relu',strides=(1,1)))\n",
+        "# if you have color image, then use Conv3D \n",
+        "model.add(Conv2D(32,kernel_size=(5,5),activation='relu',strides=(1,1)))\n",
         "#26x26x32"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "WARNING:tensorflow:From /usr/local/lib/python3.6/dist-packages/tensorflow/python/ops/init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
-            "Instructions for updating:\n",
-            "Call initializer instance with the dtype argument instead of passing it to the constructor\n"
-          ],
-          "name": "stdout"
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -364,7 +353,7 @@
         "colab": {}
       },
       "source": [
-        "model.add(Conv2D(64,kernel_size=(3,3),strides=(1,1),activation='relu'))\n",
+        "model.add(Conv2D(64,kernel_size=(5,5),strides=(1,1),activation='relu'))\n",
         "#24x24x64"
       ],
       "execution_count": 0,
@@ -412,7 +401,7 @@
         "colab": {}
       },
       "source": [
-        "model.add(Dropout(0.25))"
+        "# model.add(Dropout(0.25))"
       ],
       "execution_count": 0,
       "outputs": []
@@ -458,6 +447,7 @@
         "colab": {}
       },
       "source": [
+        "# fully connected layer \n",
         "model.add(Dense(128,activation='relu'))"
       ],
       "execution_count": 0,
@@ -481,7 +471,7 @@
         "colab": {}
       },
       "source": [
-        "model.add(Dropout(0.5))\n",
+        "# model.add(Dropout(0.2))\n",
         "#Suppose you have 128 units in the layer and set the keep_prob to 0.5, Then the activation of 64 randomly chosen units out of 128 will be set to 0, and the remaining 64 will be scaled by a factor of 50. I think a more precise description is that you only keep the activation of 50 percent of the nodes."
       ],
       "execution_count": 0,
@@ -549,14 +539,14 @@
       "metadata": {
         "id": "KrPKFPm4pkP1",
         "colab_type": "code",
-        "outputId": "cb8fe1be-15c7-40dc-c726-ea26d476e846",
+        "outputId": "e37a5664-0cbb-4cf3-ba06-d008cbfc1a40",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 173
+          "height": 731
         }
       },
       "source": [
-        "model.fit(trainX,trainY,epochs=3,batch_size=1000,\n",
+        "model.fit(trainX,trainY,epochs=20,batch_size=500,\n",
         "          validation_data=(testX,testY))"
       ],
       "execution_count": 0,
@@ -565,12 +555,46 @@
           "output_type": "stream",
           "text": [
             "Train on 55000 samples, validate on 10000 samples\n",
-            "Epoch 1/3\n",
-            "55000/55000 [==============================] - 8s 139us/sample - loss: 0.5744 - acc: 0.8234 - val_loss: 0.1507 - val_acc: 0.9551\n",
-            "Epoch 2/3\n",
-            "55000/55000 [==============================] - 4s 78us/sample - loss: 0.1736 - acc: 0.9478 - val_loss: 0.0703 - val_acc: 0.9771\n",
-            "Epoch 3/3\n",
-            "55000/55000 [==============================] - 4s 78us/sample - loss: 0.1092 - acc: 0.9681 - val_loss: 0.0510 - val_acc: 0.9828\n"
+            "Epoch 1/20\n",
+            "55000/55000 [==============================] - 4s 81us/sample - loss: 0.3117 - acc: 0.9093 - val_loss: 0.0769 - val_acc: 0.9767\n",
+            "Epoch 2/20\n",
+            "55000/55000 [==============================] - 4s 77us/sample - loss: 0.0643 - acc: 0.9812 - val_loss: 0.0397 - val_acc: 0.9875\n",
+            "Epoch 3/20\n",
+            "55000/55000 [==============================] - 4s 77us/sample - loss: 0.0459 - acc: 0.9864 - val_loss: 0.0358 - val_acc: 0.9879\n",
+            "Epoch 4/20\n",
+            "55000/55000 [==============================] - 4s 77us/sample - loss: 0.0332 - acc: 0.9901 - val_loss: 0.0299 - val_acc: 0.9894\n",
+            "Epoch 5/20\n",
+            "55000/55000 [==============================] - 4s 77us/sample - loss: 0.0265 - acc: 0.9921 - val_loss: 0.0284 - val_acc: 0.9896\n",
+            "Epoch 6/20\n",
+            "55000/55000 [==============================] - 4s 77us/sample - loss: 0.0207 - acc: 0.9935 - val_loss: 0.0309 - val_acc: 0.9894\n",
+            "Epoch 7/20\n",
+            "55000/55000 [==============================] - 4s 77us/sample - loss: 0.0174 - acc: 0.9945 - val_loss: 0.0286 - val_acc: 0.9900\n",
+            "Epoch 8/20\n",
+            "55000/55000 [==============================] - 4s 77us/sample - loss: 0.0138 - acc: 0.9955 - val_loss: 0.0248 - val_acc: 0.9910\n",
+            "Epoch 9/20\n",
+            "55000/55000 [==============================] - 4s 77us/sample - loss: 0.0109 - acc: 0.9966 - val_loss: 0.0304 - val_acc: 0.9901\n",
+            "Epoch 10/20\n",
+            "55000/55000 [==============================] - 4s 77us/sample - loss: 0.0077 - acc: 0.9979 - val_loss: 0.0267 - val_acc: 0.9913\n",
+            "Epoch 11/20\n",
+            "55000/55000 [==============================] - 4s 77us/sample - loss: 0.0066 - acc: 0.9980 - val_loss: 0.0357 - val_acc: 0.9888\n",
+            "Epoch 12/20\n",
+            "55000/55000 [==============================] - 4s 77us/sample - loss: 0.0076 - acc: 0.9974 - val_loss: 0.0365 - val_acc: 0.9890\n",
+            "Epoch 13/20\n",
+            "55000/55000 [==============================] - 4s 77us/sample - loss: 0.0063 - acc: 0.9978 - val_loss: 0.0286 - val_acc: 0.9904\n",
+            "Epoch 14/20\n",
+            "55000/55000 [==============================] - 4s 77us/sample - loss: 0.0053 - acc: 0.9983 - val_loss: 0.0259 - val_acc: 0.9917\n",
+            "Epoch 15/20\n",
+            "55000/55000 [==============================] - 4s 77us/sample - loss: 0.0038 - acc: 0.9991 - val_loss: 0.0308 - val_acc: 0.9905\n",
+            "Epoch 16/20\n",
+            "55000/55000 [==============================] - 4s 77us/sample - loss: 0.0021 - acc: 0.9994 - val_loss: 0.0273 - val_acc: 0.9923\n",
+            "Epoch 17/20\n",
+            "55000/55000 [==============================] - 4s 77us/sample - loss: 0.0016 - acc: 0.9996 - val_loss: 0.0301 - val_acc: 0.9914\n",
+            "Epoch 18/20\n",
+            "55000/55000 [==============================] - 4s 77us/sample - loss: 0.0014 - acc: 0.9996 - val_loss: 0.0464 - val_acc: 0.9895\n",
+            "Epoch 19/20\n",
+            "55000/55000 [==============================] - 4s 77us/sample - loss: 0.0024 - acc: 0.9993 - val_loss: 0.0362 - val_acc: 0.9913\n",
+            "Epoch 20/20\n",
+            "55000/55000 [==============================] - 4s 77us/sample - loss: 0.0025 - acc: 0.9991 - val_loss: 0.0327 - val_acc: 0.9915\n"
           ],
           "name": "stdout"
         },
@@ -578,14 +602,60 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7f483f161c88>"
+              "<tensorflow.python.keras.callbacks.History at 0x7ff1207d2208>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 49
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LfKKskWUJ9FM",
+        "colab_type": "text"
+      },
+      "source": [
+        "3 x 3 Filer \n",
+        "\n",
+        "\n",
+        "\n",
+        "55000/55000 [==============================] - 5s 82us/sample - loss: 0.0309 - acc: 0.9897 - val_loss: 0.0321 - val_acc: 0.9894\n",
+        "<tensorflow.python.keras.callbacks.History at 0x7ff16cf6f470>\n",
+        "\n",
+        "\n",
+        "\n",
+        "5 x 5 \n",
+        "\n",
+        "\n",
+        "Epoch 20/20\n",
+        "55000/55000 [==============================] - 5s 94us/sample - loss: 0.0111 - acc: 0.9962 - val_loss: 0.0197 - val_acc: 0.9936\n",
+        "<tensorflow.python.keras.callbacks.History at 0x7ff120d1b518>\n",
+        "\n",
+        "\n",
+        "\n",
+        "Total params: 229,706\n",
+        "Trainable params: 229,706\n",
+        "Non-trainable params: 0\n",
+        "\n",
+        "\n",
+        "\n",
+        "\n",
+        "# 5 x 5 without droput \n",
+        "\n",
+        "\n",
+        "Epoch 20/20\n",
+        "55000/55000 [==============================] - 4s 77us/sample - loss: 0.0025 - acc: 0.9991 - val_loss: 0.0327 - val_acc: 0.9915\n",
+        "<tensorflow.python.keras.callbacks.History at 0x7ff1207d2208>\n",
+        "\n",
+        "\n",
+        "Total params: 872,714\n",
+        "Trainable params: 872,714\n",
+        "Non-trainable params: 0\n",
+        "\n"
       ]
     },
     {
@@ -626,10 +696,10 @@
       "metadata": {
         "id": "kepTixEApkP6",
         "colab_type": "code",
-        "outputId": "5b158612-49e9-44ab-9786-202ea95b7d2f",
+        "outputId": "987bb68f-cccf-40d4-a2da-feeafb0e0c75",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 459
+          "height": 391
         }
       },
       "source": [
@@ -640,30 +710,26 @@
         {
           "output_type": "stream",
           "text": [
-            "Model: \"sequential\"\n",
+            "Model: \"sequential_2\"\n",
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "reshape (Reshape)            (None, 28, 28, 1)         0         \n",
+            "reshape_2 (Reshape)          (None, 28, 28, 1)         0         \n",
             "_________________________________________________________________\n",
-            "conv2d (Conv2D)              (None, 26, 26, 32)        320       \n",
+            "conv2d_6 (Conv2D)            (None, 24, 24, 32)        832       \n",
             "_________________________________________________________________\n",
-            "conv2d_1 (Conv2D)            (None, 24, 24, 64)        18496     \n",
+            "conv2d_7 (Conv2D)            (None, 20, 20, 64)        51264     \n",
             "_________________________________________________________________\n",
-            "max_pooling2d (MaxPooling2D) (None, 12, 12, 64)        0         \n",
+            "max_pooling2d_3 (MaxPooling2 (None, 10, 10, 64)        0         \n",
             "_________________________________________________________________\n",
-            "dropout (Dropout)            (None, 12, 12, 64)        0         \n",
+            "flatten_2 (Flatten)          (None, 6400)              0         \n",
             "_________________________________________________________________\n",
-            "flatten (Flatten)            (None, 9216)              0         \n",
+            "dense_4 (Dense)              (None, 128)               819328    \n",
             "_________________________________________________________________\n",
-            "dense (Dense)                (None, 128)               1179776   \n",
-            "_________________________________________________________________\n",
-            "dropout_1 (Dropout)          (None, 128)               0         \n",
-            "_________________________________________________________________\n",
-            "dense_1 (Dense)              (None, 10)                1290      \n",
+            "dense_5 (Dense)              (None, 10)                1290      \n",
             "=================================================================\n",
-            "Total params: 1,199,882\n",
-            "Trainable params: 1,199,882\n",
+            "Total params: 872,714\n",
+            "Trainable params: 872,714\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n"
           ],
